--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1 class="reverse">Hello World</h1>
+<h1 class="reverse">Wuzzup, my names boba, Bobabooski, and i hate cats.</h1>
 <p>
 Here is a paragraph that contains a few sentences of content.
 </p>
